--- a/capitulum_4.qmd
+++ b/capitulum_4.qmd
@@ -13,7 +13,7 @@ _Desunt vocabula: mors, mos, suspicium, iudicium, indicium._
 (@) Ea res est Helvetiis per  `r fitb('indicium', ignore_case = TRUE)`  enuntiata.
 
 
-(@)  `r fitb('Moribus', ignore_case = TRUE)`  suis Orgetorigem ex vinculis causam dicere coegerunt;
+(@)  `r fitb('Moribus', ignore_case = TRUE)`  suis Orgetorigem ex vinculis causam dicere coegerunt.
 
 
 (@) Die constituta causae dictionis Orgetorix ad  `r fitb('iudicium', ignore_case = TRUE)`  omnem suam familiam, ad hominum milia decem, undique coegit, et omnes clientes obaeratosque suos, quorum magnum numerum habebat, eodem conduxit; per eos ne causam diceret se eripuit. 
