--- a/site/capitulum_9.qmd
+++ b/site/capitulum_9.qmd
@@ -5,11 +5,6 @@ title: сapitulum IX
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-
-library(webexercises)
-
-add_to_quarto()
-
 ```
 
 ```{r}
@@ -64,6 +59,9 @@ q6 <- mcq(opts6)
 
 _Synonyma reperi:_
 
+::::{.columns}
+:::{.column}
+
 (1) _angustiae_ = 
 
 ```{r}
@@ -87,6 +85,10 @@ opts_largitione <- c(
 ```
 
 `r longmcq(opts_largitione)`
+
+:::
+
+:::{.column}
 
 (3) _obstrictus_ = 
 
@@ -112,7 +114,8 @@ opts_impetro <- c(
 
 `r longmcq(opts_impetro)`
 
-
+:::
+::::
 
 
 
