--- a/site/index.qmd
+++ b/site/index.qmd
@@ -2,4 +2,6 @@
 title: Qui sumus nos
 ---
 
-Pagina nondum scripta est. 
+Salvete, sodales!
+
+Haec pagina exercitia ad usum discipulorum continet quae facienda sunt post singulum capitulum ex Caesaris de Bello Gallico commentariis. Exercitia magistra Olga facit, magistra Xenia docet. Scholis intersunt Adelina, Cyrillus, Polina, Timur, Xenia.
